# stoocktool-cli

./: .gitignore  CLAUDE.md  PORTFOLIO.md  README.md  pyproject.toml  requirements.txt
stocktool/: analysis.py  cli.py  config.py  data.py  display.py  portfolio.py  sheets.py
